--- a/404-page.html
+++ b/404-page.html
@@ -62,43 +62,43 @@
             </div>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
+<!--        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="404-page.html">About</a>
+              <a href="#">About</a>
             </li>
             <li>
               <a href="zing-page.html">The Zing</a>
             </li>
             <li>
-              <a href="404-page.html">Dob</a>
+              <a href="#">Dob</a>
             </li>
             <li>
-              <a href = '404-page.html'>Narratives</a>
+              <a href = '#'>Narratives</a>
             </li>
             <li>
-              <a href = '404-page.html'>Bookstores</a>
+              <a href = '#'>Bookstores</a>
             </li>
             <li>
-              <a href = '404-page.html'>Calendar</a>
+              <a href = '#'>Calendar</a>
             </li>
             <li>
-              <a href="404-page.html">Join</a>
+              <a href="#">Join</a>
             </li>
             <li>
-              <a href = '404-page.html'>Donate</a>
+              <a href = '#'>Donate</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </nav>
     <div
       class="page-header header-filter">
       <div class="container">
-        <h2 class= 'title'>Towards an anticolonial future,</h2>
-        <h4>One book at a time</h4>
+        <h2 class= 'title'>Page Not Found</h2>
+        <h3>Hi! At this time, we are still building our website and so the page you have clicked on isn't ready yet. Sorry for the inconvenience!</h3>
 
-        <div class="row">
+<!--        <div class="row">
           <div class="col-md-8 col-md-offset-2 text-left">
           </div>
         </div>
@@ -111,8 +111,8 @@
         <br>
         <br>
         <br>
-        <a href="404-page.html" class="btn_2 button">Search</a><div class="divider"></div>
-        <a href="404-page.html" class="btn_2 button">Advanced Search</a><div class="divider"></div>
+        <a href="#" class="btn_2 button">Search</a><div class="divider"></div>
+        <a href="#" class="btn_2 button">Advanced Search</a><div class="divider"></div>
       </div>
       <br>
       <div class="col-md-8 col-md-offset-2 text-center">
@@ -121,33 +121,33 @@
       </div>
       <div class="col-md-8 col-md-offset-2 text-center">
         <span class="dot"></span><h3 class="title">Our Sister Projects</h3><span class="dot"></span>
-      </div>
+      </div> -->
     </div>
   </div>
     <div class="footer_2">
       <div class="footer_menu_2">
         <div>
           <ul style="list-style: none;">
-            <li><a href="404-page.html">About Us</a></li>
-            <li><a href="404-page.html">Volunteer</a></li>
-            <li><a href="404-page.html">Terms</a></li>
-            <li><a href="404-page.html">Manifesto</a></li>
-            <li><a href="404-page.html">Privacy</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Volunteer</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Manifesto</a></li>
+            <li><a href="#">Privacy</a></li>
           </ul>
         </div>
         <div>
           <ul style="list-style: none;">
-            <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
-            <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
-            <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
-  <!--          <li><a href="#">YouTube</a></li> -->
-            <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Tumblr</a></li>
+            <li><a href="#">YouTube</a></li>
+            <li><a href="#">Spotify</a></li>
           </ul>
         </div>
         <div>
           <ul style="list-style: none;">
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Donate</a></li>
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
+            <li><a href="#" class="btn_3 btn-fill btn-round">Donate</a></li>
+            <li><a href="#" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
           </ul>
         </div>
         <div>
