--- a/zing-page.html
+++ b/zing-page.html
@@ -56,7 +56,7 @@
         <div class="navbar-header">
             <div class="logo-container">
               <div class="logo">
-                <a href="landingpage.html">
+                <a href="index.html">
                   <img src="images/logo.png" alt="DOB logo" />
                 </a>
                </div>
@@ -99,7 +99,7 @@
       <div class="container zing-text">
         <div class="menu-trial">
         <ul class="breadcrumb_zing">
-          <li><a href="landingpage.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li>The Zing</li>
         </ul>
       </div>
