--- a/404-page.html
+++ b/404-page.html
@@ -128,26 +128,26 @@
       <div class="footer_menu_2">
         <div>
           <ul style="list-style: none;">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Volunteer</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Manifesto</a></li>
-            <li><a href="#">Privacy</a></li>
+            <li><a href="404-page.html">About Us</a></li>
+            <li><a href="404-page.html">Volunteer</a></li>
+            <li><a href="404-page.html">Terms</a></li>
+            <li><a href="404-page.html">Manifesto</a></li>
+            <li><a href="404-page.html">Privacy</a></li>
           </ul>
         </div>
         <div>
           <ul style="list-style: none;">
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Tumblr</a></li>
-            <li><a href="#">YouTube</a></li>
-            <li><a href="#">Spotify</a></li>
+            <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
+            <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
+            <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
+  <!--          <li><a href="#">YouTube</a></li> -->
+            <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
           </ul>
         </div>
         <div>
           <ul style="list-style: none;">
-            <li><a href="#" class="btn_3 btn-fill btn-round">Donate</a></li>
-            <li><a href="#" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
+            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Donate</a></li>
+            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
           </ul>
         </div>
         <div>
