--- a/zing-page.html
+++ b/zing-page.html
@@ -66,28 +66,28 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="#">About</a>
+              <a href="404-page.html">About</a>
             </li>
             <li>
               <a href="#">The Zing</a>
             </li>
             <li>
-              <a href="#">Dob</a>
+              <a href="404-page.html">Dob</a>
             </li>
             <li>
-              <a href = '#'>Narratives</a>
+              <a href="404-page.html">Narratives</a>
             </li>
             <li>
-              <a href = '#'>Bookstores</a>
+              <a href="404-page.html">Bookstores</a>
             </li>
             <li>
-              <a href = '#'>Calendar</a>
+              <a href="404-page.html">Calendar</a>
             </li>
             <li>
-              <a href="#">Join</a>
+              <a href="404-page.html">Join</a>
             </li>
             <li>
-              <a href = '#'>Donate</a>
+              <a href="404-page.html">Donate</a>
             </li>
           </ul>
         </div>
@@ -127,44 +127,45 @@
       </div> -->
     </div>
   </div>
-  <div class="footer_2">
-    <div class="footer_menu_2">
-      <div>
-        <ul style="list-style: none;">
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Volunteer</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Manifesto</a></li>
-          <li><a href="#">Privacy</a></li>
-        </ul>
-      </div>
-      <div>
-        <ul style="list-style: none;">
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Tumblr</a></li>
-          <li><a href="#">YouTube</a></li>
-          <li><a href="#">Spotify</a></li>
-        </ul>
-      </div>
-      <div>
-        <ul style="list-style: none;">
-          <li><a href="#" class="btn_3 btn-fill btn-round">Donate</a></li>
-          <li><a href="#" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
-        </ul>
-      </div>
-      <div>
-        <ul style="list-style: none;">
-          <li><div class="copyright pull-right">
-                    &copy; 2021 Decolonizsing our books
-                  </div>
-        </ul>
+    <div class="footer_2">
+      <div class="footer_menu_2">
+        <div>
+          <ul style="list-style: none;">
+            <li><a href="404-page.html">About Us</a></li>
+            <li><a href="404-page.html">Volunteer</a></li>
+            <li><a href="404-page.html">Terms</a></li>
+            <li><a href="404-page.html">Manifesto</a></li>
+            <li><a href="404-page.html">Privacy</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul style="list-style: none;">
+            <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
+            <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
+            <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
+  <!--          <li><a href="#">YouTube</a></li> -->
+            <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul style="list-style: none;">
+            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Donate</a></li>
+            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul style="list-style: none;">
+            <li><div class="copyright pull-right">
+                      &copy; 2021 Decolonizsing our books
+                    </div>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
+  </body>
   <!--   Core JS Files   -->
-  <script src="assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-  <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="assets/js/jquery-3.2.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
   <script>
     var header_height;
     var fixed_section;
@@ -178,4 +179,4 @@
       demo.initDocumentationCharts();
     });
   </script>
-</body>
+</html>
