--- a/404-page.html
+++ b/404-page.html
@@ -56,19 +56,19 @@
         <div class="navbar-header">
             <div class="logo-container">
             <div class="logo">
-              <img src="images/logo.png" alt="DOB logo" />
+              <a href="index.html"><img src="images/logo.png" alt="DOB logo" /></a>
              </div>
               <div class="brand"></div>
             </div>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-<!--        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="#">About</a>
+              <a href="about.html">About</a>
             </li>
             <li>
-              <a href="zing-page.html">The Zing</a>
+              <a href="zing.html">The Zing</a>
             </li>
             <li>
               <a href="#">Dob</a>
@@ -89,7 +89,7 @@
               <a href = '#'>Donate</a>
             </li>
           </ul>
-        </div> -->
+        </div>
       </div>
     </nav>
     <div
