--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="404-page.html">About</a>
+              <a href="about.html">About</a>
             </li>
             <li>
-              <a href="zing-page.html">The Zing</a>
+              <a href="zing.html">The Zing</a>
             </li>
             <li>
               <a href="404-page.html">Dob</a>
@@ -122,7 +122,7 @@
       <div class="col-md-8 col-md-offset-2 text-center">
         <span class="dot"></span><h3 class="title">Our Sister Projects</h3><span class="dot"></span>
       </div>
-    </div>
+</div>
   </div>
     <div class="footer_2">
       <div class="footer_menu_2">
@@ -159,6 +159,7 @@
         </div>
       </div>
     </div>
+        </div>
   </body>
   <!--   Core JS Files   -->
   <script src="assets/js/jquery-3.2.1.min.js"></script>
