--- a/zing.html
+++ b/zing.html
@@ -66,7 +66,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="404-page.html">About</a>
+              <a href="about.html">About</a>
             </li>
             <li>
               <a href="#">The Zing</a>
@@ -107,8 +107,8 @@
       <center><h2 class= 'title_zing'><span class="dot"></span>The Zing<span class="dot"></span></h2></center>
       <br>
       <br>
-      <div class="full-width">
-        <center><h3 class="title">Image/Illustration</h3></center>
+      <div class="full-width tan">
+      <!--  <center><h3 class="title">Image/Illustration</h3></center> -->
       </div>
 
       <br>
