--- a/about.html
+++ b/about.html
@@ -2,14 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="description"
-      content="Start your development with a Design System for Bootstrap 4, React and Reactstrap."
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Anoushka" />
     <title>
       Decolonizsing our Books
@@ -47,61 +40,58 @@
   </style>
   </head>
   <body class="components-page">
-    <nav
-      class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll"
-    >
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <div class="logo-container">
-              <div class="logo">
-                <a href="index.html">
-                  <img src="images/logo.png" alt="DOB logo">
-                </a>
-               </div>
-            </div>
+    <nav class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll">
+      <nav class="navbar-f1">
+        <div class="logo-container">
+          <div class="logo">
+            <a href="index.html" class="nav-logo-f1">
+              <img src="images/logo.png" alt="DOB logo">
+            </a>
+          </div>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="#">About</a>
+
+          <ul class="nav-menu nav navbar-nav-f1">
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
             </li>
-            <li>
-              <a href="zing.html">The Zing</a>
+            <li class="nav-item">
+              <a href="zing.html" class="nav-link">The Zing</a>
             </li>
-            <li>
-              <a href="404-page.html">Dob</a>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Dob</a>
             </li>
-            <li>
-              <a href="404-page.html">Narratives</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Narratives</a>
             </li>
-            <li>
-              <a href="404-page.html">Bookstores</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Bookstores</a>
             </li>
-            <li>
-              <a href="404-page.html">Calendar</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Calendar</a>
             </li>
-            <li>
-              <a href="404-page.html">Join</a>
+            <li class="nav-item">
+              <a href= "#" class="nav-link">Join</a>
             </li>
-            <li>
-              <a href="404-page.html">Donate</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Donate</a>
             </li>
           </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
-      </div>
+
     </nav>
+</nav>
     <div class="page-header header-filter_2">
       <div class="page-color">
 
       <div class="container zing-text">
-        <div class="menu-trial">
         <ul class="breadcrumb_zing">
           <li><a href="index.html">Home</a></li>
           <li>About us</li>
         </ul>
-      </div>
       <div class="full-width gray">
         <center><h3 class="title"></h3></center>
       </div>
@@ -200,7 +190,6 @@
         </div>
       </div>
       <br>
-      <br>
   </div>
 </div>
 
@@ -208,7 +197,7 @@
       <div class="footer_menu_2">
         <div>
           <ul style="list-style: none;">
-            <li><a href="404-page.html">About Us</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="404-page.html">Volunteer</a></li>
             <li><a href="404-page.html">Terms</a></li>
             <li><a href="404-page.html">Manifesto</a></li>
@@ -257,4 +246,25 @@
       demo.initDocumentationCharts();
     });
   </script>
+  <script>
+  const hamburger = document.querySelector(".hamburger");
+  const navMenu = document.querySelector(".nav-menu");
+
+  hamburger.addEventListener("click", mobileMenu);
+
+  function mobileMenu() {
+      hamburger.classList.toggle("active");
+      navMenu.classList.toggle("active");
+  }
+  const navLink = document.querySelectorAll(".nav-link");
+
+  navLink.forEach(n => n.addEventListener("click", closeMenu));
+
+  function closeMenu() {
+      hamburger.classList.remove("active");
+      navMenu.classList.remove("active");
+  }
+
+  </script>
+
 </html>
