--- a/404-page.html
+++ b/404-page.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
       content="Start your development with a Design System for Bootstrap 4, React and Reactstrap."
@@ -46,54 +43,54 @@
     }
   </style>
   </head>
-  <body id="mainpage" class="components-page page-header" style="background-image: url('images/homepage.png');"
->
-    <nav
-      class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll"
-    >
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <div class="logo-container">
-            <div class="logo">
-              <a href="index.html"><img src="images/logo.png" alt="DOB logo" /></a>
-             </div>
-              <div class="brand"></div>
-            </div>
+  <body id="mainpage" class="components-page page-header" style="background-image: url('images/homepage.png');">
+
+    <nav class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll">
+      <nav class="navbar-f1">
+        <div class="logo-container">
+          <div class="logo">
+            <a href="index.html" class="nav-logo-f1">
+              <img src="images/logo.png" alt="DOB logo">
+            </a>
+          </div>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="about.html">About</a>
+
+          <ul class="nav-menu nav navbar-nav-f1">
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
             </li>
-            <li>
-              <a href="zing.html">The Zing</a>
+            <li class="nav-item">
+              <a href="zing.html" class="nav-link">The Zing</a>
             </li>
-            <li>
-              <a href="#">Dob</a>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Dob</a>
             </li>
-            <li>
-              <a href = '#'>Narratives</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Narratives</a>
             </li>
-            <li>
-              <a href = '#'>Bookstores</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Bookstores</a>
             </li>
-            <li>
-              <a href = '#'>Calendar</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Calendar</a>
             </li>
-            <li>
-              <a href="#">Join</a>
+            <li class="nav-item">
+              <a href= "#" class="nav-link">Join</a>
             </li>
-            <li>
-              <a href = '#'>Donate</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Donate</a>
             </li>
           </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
-      </div>
+
     </nav>
-    <div
-      class="page-header header-filter">
+</nav>
+    <div class="page-header header-filter">
+
       <div class="container">
         <h2 class= 'title'>Page Not Found</h2>
         <h3>Hi! At this time, we are still building our website and so the page you have clicked on isn't ready yet. Sorry for the inconvenience!</h3>
@@ -128,7 +125,7 @@
       <div class="footer_menu_2">
         <div>
           <ul style="list-style: none;">
-            <li><a href="404-page.html">About Us</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="404-page.html">Volunteer</a></li>
             <li><a href="404-page.html">Terms</a></li>
             <li><a href="404-page.html">Manifesto</a></li>
@@ -159,8 +156,29 @@
         </div>
       </div>
     </div>
-  </body>
+
   <!--   Core JS Files   -->
+<script>
+const hamburger = document.querySelector(".hamburger");
+const navMenu = document.querySelector(".nav-menu");
+
+hamburger.addEventListener("click", mobileMenu);
+
+function mobileMenu() {
+    hamburger.classList.toggle("active");
+    navMenu.classList.toggle("active");
+}
+const navLink = document.querySelectorAll(".nav-link");
+
+navLink.forEach(n => n.addEventListener("click", closeMenu));
+
+function closeMenu() {
+    hamburger.classList.remove("active");
+    navMenu.classList.remove("active");
+}
+
+</script>
+
   <script src="assets/js/jquery-3.2.1.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script>
@@ -176,4 +194,5 @@
       demo.initDocumentationCharts();
     });
   </script>
+  </body>
 </html>
