--- a/zing.html
+++ b/zing.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="description"
-      content="Start your development with a Design System for Bootstrap 4, React and Reactstrap."
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Anoushka" />
     <title>
       Decolonizsing our Books
@@ -48,90 +40,80 @@
   </style>
   </head>
   <body class="components-page">
-    <nav
-      class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll"
-    >
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <div class="logo-container">
-              <div class="logo">
-                <a href="index.html">
-                  <img src="images/logo.png" alt="DOB logo" />
-                </a>
-               </div>
-            </div>
+    <nav class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll">
+      <nav class="navbar-f1">
+        <div class="logo-container">
+          <div class="logo">
+            <a href="index.html" class="nav-logo-f1">
+              <img src="images/logo.png" alt="DOB logo">
+            </a>
+          </div>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="about.html">About</a>
+
+          <ul class="nav-menu nav navbar-nav-f1">
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
             </li>
-            <li>
-              <a href="#">The Zing</a>
+            <li class="nav-item">
+              <a href="zing.html" class="nav-link">The Zing</a>
             </li>
-            <li>
-              <a href="404-page.html">Dob</a>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Dob</a>
             </li>
-            <li>
-              <a href="404-page.html">Narratives</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Narratives</a>
             </li>
-            <li>
-              <a href="404-page.html">Bookstores</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Bookstores</a>
             </li>
-            <li>
-              <a href="404-page.html">Calendar</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Calendar</a>
             </li>
-            <li>
-              <a href="404-page.html">Join</a>
+            <li class="nav-item">
+              <a href= "#" class="nav-link">Join</a>
             </li>
-            <li>
-              <a href="404-page.html">Donate</a>
+            <li class="nav-item">
+              <a href = '#' class="nav-link">Donate</a>
             </li>
           </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
-      </div>
+
     </nav>
-    <div
-      class="page-header header-filter_2">
+</nav>
+    <div class="page-header header-filter_2">
+      <div class="page-color">
 
       <div class="container zing-text">
-        <div class="menu-trial">
         <ul class="breadcrumb_zing">
           <li><a href="index.html">Home</a></li>
           <li>The Zing</li>
         </ul>
-      </div>
-      <hr color="black">
       <center><h2 class= 'title_zing'><span class="dot"></span>The Zing<span class="dot"></span></h2></center>
-      <br>
-      <br>
-      <div class="full-width tan">
-      <!--  <center><h3 class="title">Image/Illustration</h3></center> -->
-      </div>
-
-      <br>
+      <br><div class="full-width tan"></div>
       <br>
       <br>
       <div class="text-center">
-        <p>Unfortunately, search engine algorithms make it very difficult for underrepresented narratives to be seen or heard. We want to actively tackle this and make it easier for these narratives to come to the surface.</p>
-
-        <p>The Zing is a monthly curatorial newsletter by team dob dedicated to celebrating and promoting art and knowledge by people of historically marginalised and intersectional identities. </p>
+        <p>Unfortunately, search engine algorithms make it very difficult for underrepresented narratives to be seen or heard.
+          We want to actively tackle this and make it easier for these narratives to come to the surface.</p>
+        <p>The Zing is a monthly curatorial newsletter by team dob dedicated to celebrating and promoting art and knowledge by people of
+          historically marginalised and intersectional identities. </p>
       </div>
       <br>
-      <br>
-  <!--    <div class="col-md-8 col-md-offset-2 text-center">
-        <a href="#" class="btn_2">Submit</a><div class="divider"></div>
-        <a href="#" class="btn_2">Subscribe</a><div class="divider"></div>
-      </div> -->
-    </div>
+      <div class="col-md-8 col-md-offset-2 text-center">
+        <a href="404-page.html" class="btn_2">Subscribe</a><div class="divider"></div>
+      </div>
   </div>
+</div>
+</div>
     <div class="footer_2">
       <div class="footer_menu_2">
         <div>
           <ul style="list-style: none;">
-            <li><a href="404-page.html">About Us</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="404-page.html">Volunteer</a></li>
             <li><a href="404-page.html">Terms</a></li>
             <li><a href="404-page.html">Manifesto</a></li>
@@ -164,8 +146,8 @@
     </div>
   </body>
   <!--   Core JS Files   -->
-  <script src="assets/js/jquery-3.2.1.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script>
     var header_height;
     var fixed_section;
@@ -179,4 +161,25 @@
       demo.initDocumentationCharts();
     });
   </script>
+  <script>
+  const hamburger = document.querySelector(".hamburger");
+  const navMenu = document.querySelector(".nav-menu");
+
+  hamburger.addEventListener("click", mobileMenu);
+
+  function mobileMenu() {
+      hamburger.classList.toggle("active");
+      navMenu.classList.toggle("active");
+  }
+  const navLink = document.querySelectorAll(".nav-link");
+
+  navLink.forEach(n => n.addEventListener("click", closeMenu));
+
+  function closeMenu() {
+      hamburger.classList.remove("active");
+      navMenu.classList.remove("active");
+  }
+
+  </script>
+
 </html>
