--- a/404-page.html
+++ b/404-page.html
@@ -1,198 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
     <meta
       name="description"
       content="Start your development with a Design System for Bootstrap 4, React and Reactstrap."
     />
     <meta name="author" content="Anoushka" />
     <title>
-      Decolonizsing our Books
+      Sample from beginning
     </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- Favicon to add! -->
-
-    <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://fonts.googleapis.com/css?family=Inconsolata:300,400,500,700"
+      href="https://fonts.googleapis.com/css?family=Inconsolata:300,400,500,700|Material+Icons"
     />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
     />
-    <!-- DOB CSS -->
-    <!-- CSS Files -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <link href="bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="css/app2.css" rel="stylesheet" />
-    <style media="screen">
-    .page-header {
-      height: 100vh;
-    }
-
-    .page-header .description {
-      color: #ffffff;
-    }
-
-    .header-filter .container {
-      padding-top: 33vh;
-    }
-  </style>
   </head>
-  <body id="mainpage" class="components-page page-header" style="background-image: url('images/homepage.png');">
 
-    <nav class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll">
-      <nav class="navbar-f1">
-        <div class="logo-container">
-          <div class="logo">
-            <a href="index.html" class="nav-logo-f1">
-              <img src="images/logo.png" alt="DOB logo">
-            </a>
-          </div>
-        </div>
+  <body class="home">
+    <nav style="background-color: #453F36; height: 65px;">
+      <div class="logo">
+        <a href="index.html" class="nav-logo-f1">
+          <img src="images/logo.png" alt="DOB logo">
+        </a>
+      </div>
 
-          <ul class="nav-menu nav navbar-nav-f1">
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="zing.html" class="nav-link">The Zing</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Dob</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Narratives</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Bookstores</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Calendar</a>
-            </li>
-            <li class="nav-item">
-              <a href= "#" class="nav-link">Join</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Donate</a>
-            </li>
-          </ul>
+      <div class="navbar-f1">
+
+        <ul class="nav-menu nav navbar-nav-f1">
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="zing.html" class="nav-link">The Zing</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Dob</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Narratives</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Bookstores</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Calendar</a>
+          </li>
+          <li class="nav-item">
+            <a href= "#" class="nav-link">Join</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Donate</a>
+          </li>
+        </ul>
         <div class="hamburger">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-
+      </div>
     </nav>
-</nav>
-    <div class="page-header header-filter">
-
-      <div class="container">
-        <h2 class= 'title'>Page Not Found</h2>
-        <h3>Hi! At this time, we are still building our website and so the page you have clicked on isn't ready yet. Sorry for the inconvenience!</h3>
-
-<!--        <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-left">
-          </div>
-        </div>
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <form role="search" id="form">
-          <input type="search" id="query" name="q"
-           placeholder="Search books, narratives, bookstores..."
-           aria-label="Search through site content">
-        </form>
-        <br>
-        <br>
-        <br>
-        <a href="#" class="btn_2 button">Search</a><div class="divider"></div>
-        <a href="#" class="btn_2 button">Advanced Search</a><div class="divider"></div>
-      </div>
+    <div class="container">
+      <h2 class="title">Page Not Found</h2>
+      <h3 class="subtitle">Hi! At this time, we are still building our website and
+         so the page you have clicked on isn't ready yet. Sorry for the inconvenience!</h3>
       <br>
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <span class="dot"></span><h3 class="title">Our Projects</h3><span class="dot"></span>
-
-      </div>
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <span class="dot"></span><h3 class="title">Our Sister Projects</h3><span class="dot"></span>
-      </div> -->
+      <br>
+      <br>
+      <br>
     </div>
-  </div>
-    <div class="footer_2">
-      <div class="footer_menu_2">
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="404-page.html">Volunteer</a></li>
-            <li><a href="404-page.html">Terms</a></li>
-            <li><a href="404-page.html">Manifesto</a></li>
-            <li><a href="404-page.html">Privacy</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
-            <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
-            <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
-  <!--          <li><a href="#">YouTube</a></li> -->
-            <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Donate</a></li>
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><div class="copyright pull-right">
-                      &copy; 2021 Decolonizsing our books
-                    </div>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <footer class="footer">
+      <ul>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="404-page.html">Volunteer</a></li>
+        <li><a href="404-page.html">Terms</a></li>
+        <li><a href="404-page.html">Manifesto</a></li>
+        <li><a href="404-page.html">Privacy</a></li>
+      </ul>
+      <ul>
+        <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
+        <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
+        <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
+      </ul>
+      <ul>
+        <li><a href="404-page.html" class="button_1">Donate</a></li>
+        <li><a href="404-page.html" class="button_1">Get In Touch</a></li>
+      </ul>
+      <ul>
+        <li>&copy; 2021 Decolonizsing our books</li>
+      </ul>
 
-  <!--   Core JS Files   -->
-<script>
-const hamburger = document.querySelector(".hamburger");
-const navMenu = document.querySelector(".nav-menu");
 
-hamburger.addEventListener("click", mobileMenu);
+    </footer>
 
-function mobileMenu() {
-    hamburger.classList.toggle("active");
-    navMenu.classList.toggle("active");
-}
-const navLink = document.querySelectorAll(".nav-link");
-
-navLink.forEach(n => n.addEventListener("click", closeMenu));
-
-function closeMenu() {
-    hamburger.classList.remove("active");
-    navMenu.classList.remove("active");
-}
-
-</script>
-
-  <script src="assets/js/jquery-3.2.1.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script>
-    var header_height;
-    var fixed_section;
-    var floating = false;
-
-    $().ready(function() {
-      suggestions_distance = $("#suggestions").offset();
-      pay_height = $(".fixed-section").outerHeight();
-
-      $(window).on("scroll", md.checkScrollForTransparentNavbar);
-      demo.initDocumentationCharts();
-    });
-  </script>
   </body>
-</html>
+
+  <script>
+  const hamburger = document.querySelector(".hamburger");
+  const navMenu = document.querySelector(".nav-menu");
+
+  hamburger.addEventListener("click", mobileMenu);
+
+  function mobileMenu() {
+      hamburger.classList.toggle("active");
+      navMenu.classList.toggle("active");
+  }
+  const navLink = document.querySelectorAll(".nav-link");
+
+  navLink.forEach(n => n.addEventListener("click", closeMenu));
+
+  function closeMenu() {
+      hamburger.classList.remove("active");
+      navMenu.classList.remove("active");
+  }
+
+  </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+  </html>
