--- a/about.html
+++ b/about.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Start your development with a Design System for Bootstrap 4, React and Reactstrap."
+    />
     <meta name="author" content="Anoushka" />
     <title>
-      Decolonizsing our Books
+      Sample from beginning
     </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- Favicon to add! -->
-
-    <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
       type="text/css"
@@ -20,113 +22,83 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
     />
-    <!-- DOB CSS -->
-    <!-- CSS Files -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <link href="bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="css/app2.css" rel="stylesheet" />
-    <style media="screen">
-    .page-header {
-      height: 100vh;
-    }
-
-    .page-header .description {
-      color: #ffffff;
-    }
-
-    .header-filter .container {
-      padding-top: 33vh;
-    }
-  </style>
   </head>
-  <body class="components-page">
-    <nav class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll">
-      <nav class="navbar-f1">
-        <div class="logo-container">
-          <div class="logo">
-            <a href="index.html" class="nav-logo-f1">
-              <img src="images/logo.png" alt="DOB logo">
-            </a>
-          </div>
-        </div>
+  <body class="about">
+    <nav style="background-color: #453F36; height: 65px;">
+      <div class="logo">
+        <a href="index.html" class="nav-logo-f1">
+          <img src="images/logo.png" alt="DOB logo">
+        </a>
+      </div>
 
-          <ul class="nav-menu nav navbar-nav-f1">
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="zing.html" class="nav-link">The Zing</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Dob</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Narratives</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Bookstores</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Calendar</a>
-            </li>
-            <li class="nav-item">
-              <a href= "#" class="nav-link">Join</a>
-            </li>
-            <li class="nav-item">
-              <a href = '#' class="nav-link">Donate</a>
-            </li>
-          </ul>
+      <div class="navbar-f1">
+
+        <ul class="nav-menu nav navbar-nav-f1">
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="zing.html" class="nav-link">The Zing</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Dob</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Narratives</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Bookstores</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Calendar</a>
+          </li>
+          <li class="nav-item">
+            <a href= "#" class="nav-link">Join</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Donate</a>
+          </li>
+        </ul>
         <div class="hamburger">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-
-    </nav>
-</nav>
-    <div class="page-header header-filter_2">
-      <div class="page-color">
-
-      <div class="container zing-text">
-        <ul class="breadcrumb_zing">
-          <li><a href="index.html">Home</a></li>
-          <li>About us</li>
-        </ul>
-      <div class="full-width gray">
-        <center><h3 class="title"></h3></center>
       </div>
-      <hr>
-      <center><h2 class= 'title_zing'><span class="dot"></span>decoloniszing our bookshelves<span class="dot"></span></h2></center>
+    </nav>
+    <div class="container">
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Home</a></li>
+        <li>About us</li>
+      </ul>
+      <div class="full-width gray"></div>
+      <center><h3 class= 'title'><span class="dot"></span>decoloniszing our bookshelves<span class="dot"></span></h3></center>
       <br>
-      <br>
+
       <div class="text-center">
         <p>The purpose of this database is simple- to build an accessible catalogue of literature that receives data from local bookstores and
           libraries from all around the world. We want to design a website that puts accessibility before aesthetic-- by which we mean the purpose
            of the website is to make literature by people of marginalised and intersectional identities easily available and provide independent,
             left-leaning bookshops with the visibility they lack.</p>
       </div>
+      <center><div class="center buttons">
+        <a class="btn_2" href="404-page.html">Search</a>
+        <a class="btn_2" href="404-page.html">Advanced Search</a>
+      </div></center>
+      <center><h4 class= 'title'><span class="dot"></span>What challenges are we facing?<span class="dot"></span></h4></center>
       <br>
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <a href="404-page.html" class="btn_2">Volunteer</a><div class="divider"></div>
-        <a href="404-page.html" class="btn_2">Donate</a><div class="divider"></div>
-      </div>
+      <ol class="no-bullet about-list">
+        <li>Lack of awareness and access to books by authors of marginalised and intersectional identities.</li>
+        <li>Capitalist, hegemonic way of distributing books which focus on cis, white male narratives or focus on catering to a white/Western audience.</li>
+        <li>Algorithms that are ingrained with racist, sexist and colonial biases hence recommend and promote only a certain kind of literature</li>
+        <li>Lack of disability-friendly / accessible resources</li>
+        <li>Uncatalogued works of literature, and literature that has been suppressed or censored.</li> <!--This is our image tag inside the List Item-->
+      </ol>
       <br>
-      <br>
-      <br>
-      <center><h2 class= 'title_zing'><span class="dot"></span>What challenges are we facing?<span class="dot"></span></h2></center>
-      <br>
-      <br>
-      <ul class="no-bullet">
-        <li><img src="images/graysquare.png" alt="My Image"> 1. Lack of awareness and access to books by authors of marginalised and intersectional identities.</li>
-        <li><img src="images/graysquare.png" alt="My Image"> 2. Capitalist, hegemonic way of distributing books which focus on cis, white male narratives or focus on catering to a white/Western audience.</li>
-        <li><img src="images/graysquare.png" alt="My Image"> 3. Algorithms that are ingrained with racist, sexist and colonial biases hence recommend and promote only a certain kind of literature</li>
-        <li><img src="images/graysquare.png" alt="My Image"> 4. Lack of disability-friendly / accessible resources</li>
-        <li><img src="images/graysquare.png" alt="My Image"> 5. Uncatalogued works of literature, and literature that has been suppressed or censored.</li> <!--This is our image tag inside the List Item-->
-
-      </ul>
-      <br>
-      <br>
-      <center><h2 class= 'title_zing'><span class="dot"></span>What sort of literature are we cataloguing?<span class="dot"></span></h2></center>
+      <center><h4 class= 'title'><span class="dot"></span>What sort of literature are we cataloguing?<span class="dot"></span></h4></center>
       <br>
       <p>We are looking for books that are by (in no particular order and continuously updated):</p>
       <ol>
@@ -157,7 +129,7 @@
       </div>
       <br>
       <br>
-      <center><h2 class= 'title_zing'><span class="dot"></span>Questions we’d ask ourselves before letting an entry onto the list:<span class="dot"></span></h2></center>
+      <center><h4 class= 'title'><span class="dot"></span>Questions we’d ask ourselves before letting an entry onto the list:<span class="dot"></span></h4></center>
       <br>
       <p>Please note that some authors will be on low priority, while some will definitely not be on the list. We will be actively collecting
         feedback to maintain transparency and accountability.
@@ -190,62 +162,37 @@
         </div>
       </div>
       <br>
-  </div>
-</div>
+      <br>
 
-    <div class="footer_2">
-      <div class="footer_menu_2">
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="404-page.html">Volunteer</a></li>
-            <li><a href="404-page.html">Terms</a></li>
-            <li><a href="404-page.html">Manifesto</a></li>
-            <li><a href="404-page.html">Privacy</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
-            <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
-            <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
-  <!--          <li><a href="#">YouTube</a></li> -->
-            <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Donate</a></li>
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><div class="copyright pull-right">
-                      &copy; 2021 Decolonizsing our books
-                    </div>
-          </ul>
-        </div>
-      </div>
     </div>
-  </div>
+    <footer class="footer">
+      <ul>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="404-page.html">Volunteer</a></li>
+        <li><a href="404-page.html">Terms</a></li>
+        <li><a href="404-page.html">Manifesto</a></li>
+        <li><a href="404-page.html">Privacy</a></li>
+      </ul>
+      <ul>
+        <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
+        <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
+        <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
+      </ul>
+      <ul>
+        <li><a href="404-page.html" class="button_1">Donate</a></li>
+        <li><a href="404-page.html" class="button_1">Get In Touch</a></li>
+      </ul>
+      <ul>
+        <li>&copy; 2021 Decolonizsing our books</li>
+      </ul>
+
+
+    </footer>
+
   </body>
-  <!--   Core JS Files   -->
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script>
-    var header_height;
-    var fixed_section;
-    var floating = false;
 
-    $().ready(function() {
-      suggestions_distance = $("#suggestions").offset();
-      pay_height = $(".fixed-section").outerHeight();
-
-      $(window).on("scroll", md.checkScrollForTransparentNavbar);
-      demo.initDocumentationCharts();
-    });
-  </script>
   <script>
   const hamburger = document.querySelector(".hamburger");
   const navMenu = document.querySelector(".nav-menu");
@@ -266,5 +213,9 @@
   }
 
   </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 
 </html>
