--- a/index.html
+++ b/index.html
@@ -9,171 +9,151 @@
     />
     <meta name="author" content="Anoushka" />
     <title>
-      Decolonizsing our Books
+      Sample from beginning
     </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- Favicon to add! -->
-
-    <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://fonts.googleapis.com/css?family=Inconsolata:300,400,500,700"
+      href="https://fonts.googleapis.com/css?family=Inconsolata:300,400,500,700|Material+Icons"
     />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
     />
-    <!-- DOB CSS -->
-    <!-- CSS Files -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <link href="bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="css/app2.css" rel="stylesheet" />
-    <style media="screen">
-    .page-header {
-      height: 100vh;
-    }
-
-    .page-header .description {
-      color: #ffffff;
-    }
-
-    .header-filter .container {
-      padding-top: 33vh;
-    }
-  </style>
   </head>
-  <body id="mainpage" class="components-page page-header" style="background-image: url('images/homepage.png');"
->
-<nav class="navbar navbar-color navbar-fixed-top navbar-color-on-scroll">
-  <nav class="navbar-f1">
-    <div class="logo-container">
+  <body class="home">
+    <nav style="background-color: #453F36; height: 65px;">
       <div class="logo">
         <a href="index.html" class="nav-logo-f1">
           <img src="images/logo.png" alt="DOB logo">
         </a>
       </div>
-    </div>
 
-      <ul class="nav-menu nav navbar-nav-f1">
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">About</a>
-        </li>
-        <li class="nav-item">
-          <a href="zing.html" class="nav-link">The Zing</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">Dob</a>
-        </li>
-        <li class="nav-item">
-          <a href = '#' class="nav-link">Narratives</a>
-        </li>
-        <li class="nav-item">
-          <a href = '#' class="nav-link">Bookstores</a>
-        </li>
-        <li class="nav-item">
-          <a href = '#' class="nav-link">Calendar</a>
-        </li>
-        <li class="nav-item">
-          <a href= "#" class="nav-link">Join</a>
-        </li>
-        <li class="nav-item">
-          <a href = '#' class="nav-link">Donate</a>
-        </li>
-      </ul>
-    <div class="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
+      <div class="navbar-f1">
 
-</nav>
-</nav>
-    <div
-      class="page-header header-filter">
-      <div class="container">
-        <h2 class= 'title'>Towards an anticolonial future,</h2>
-        <h4>One book at a time</h4>
-
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-left">
-          </div>
+        <ul class="nav-menu nav navbar-nav-f1">
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="zing.html" class="nav-link">The Zing</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Dob</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Narratives</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Bookstores</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Calendar</a>
+          </li>
+          <li class="nav-item">
+            <a href= "#" class="nav-link">Join</a>
+          </li>
+          <li class="nav-item">
+            <a href = '#' class="nav-link">Donate</a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
-      <div class="col-md-8 col-md-offset-2 text-center">
+      </div>
+    </nav>
+    <div class="container">
+      <h2 class="title">Towards an anticolonial future,</h2>
+      <h3 class="subtitle">One book at a time</h3>
+      <div class="center">
         <form role="search" id="form">
           <input type="search" id="query" name="q"
            placeholder="Search books, narratives, bookstores..."
            aria-label="Search through site content">
         </form>
         <br>
+        <div class="buttons">
+          <a class="btn_2" href="404-page.html">Search</a>
+          <a class="btn_2" href="404-page.html">Advanced Search</a>
+        </div>
         <br>
         <br>
-        <a href="404-page.html" class="btn_2 button">Search</a><div class="divider"></div>
-        <a href="404-page.html" class="btn_2 button">Advanced Search</a><div class="divider"></div>
-      </div>
-      <br>
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <span class="dot"></span><h3 class="title">Our Projects</h3><span class="dot"></span>
+        <span class="dot"></span><h4 class="title">Our Projects</h4><span class="dot"></span>
+        <br>
+        <br>
+        <br>
+        <div class="row">
+          <div class="col">
+            <div class="dark-gray">The Zing</div>
+          </div>
+          <div class="col">
+            <div class="dark-gray">Decolonizing our bookshelves:towards an anticolonial bookshelves</div>
+          </div>
 
-      </div>
-      <div class="col-md-8 col-md-offset-2 text-center">
-        <span class="dot"></span><h3 class="title">Our Sister Projects</h3><span class="dot"></span>
-      </div>
-</div>
-  </div>
-    <div class="footer_2">
-      <div class="footer_menu_2">
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="404-page.html">Volunteer</a></li>
-            <li><a href="404-page.html">Terms</a></li>
-            <li><a href="404-page.html">Manifesto</a></li>
-            <li><a href="404-page.html">Privacy</a></li>
-          </ul>
+          <div class="col">
+            <div class="dark-gray">Curating narratives, reading lists, oral archives, syllabi</div>
+          </div>
+
+          <div class="col">
+            <div class="dark-gray">The public calendar</div>
+          </div>
+
+          <div class="col">
+            <div class="dark-gray">Reading beyond monopolies: bookstores near you</div>
+          </div>
         </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
-            <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
-            <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
-  <!--          <li><a href="#">YouTube</a></li> -->
-            <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Donate</a></li>
-            <li><a href="404-page.html" class="btn_3 btn-fill btn-round">Get In Touch</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul style="list-style: none;">
-            <li><div class="copyright pull-right">
-                      &copy; 2021 Decolonizsing our books
-                    </div>
-          </ul>
+
+        <br>
+        <span class="dot"></span><h4 class="title">Our Sister Projects</h4><span class="dot"></span>
+        <br>
+        <br><br>
+        <div class="row">
+          <div class="col">
+            <div class="dark-gray-2">Bilori Journal</div>
+          </div>
+          <div class="col">
+            <div class="dark-gray-2">Liminal Transit Review</div>
+          </div>
         </div>
       </div>
+
+
     </div>
-        </div>
+    <footer class="footer">
+      <ul>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="404-page.html">Volunteer</a></li>
+        <li><a href="404-page.html">Terms</a></li>
+        <li><a href="404-page.html">Manifesto</a></li>
+        <li><a href="404-page.html">Privacy</a></li>
+      </ul>
+      <ul>
+        <li><a href="https://www.instagram.com/decolonis.zing/">Instagram</a></li>
+        <li><a href="https://twitter.com/decoloniszing">Twitter</a></li>
+        <li><a href="https://decoloniszing.tumblr.com">Tumblr</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="https://open.spotify.com/show/2aZrciMyUr9SlhcaufOj4R?si=3Ms7AbtDRHq6F32AoY-PvQ">Spotify</a></li>
+      </ul>
+      <ul>
+        <li><a href="404-page.html" class="button_1">Donate</a></li>
+        <li><a href="404-page.html" class="button_1">Get In Touch</a></li>
+      </ul>
+      <ul>
+        <li>&copy; 2021 Decolonizsing our books</li>
+      </ul>
+
+
+    </footer>
+
   </body>
-  <!--   Core JS Files   -->
-  <script src="assets/js/jquery-3.2.1.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script>
-    var header_height;
-    var fixed_section;
-    var floating = false;
 
-    $().ready(function() {
-      suggestions_distance = $("#suggestions").offset();
-      pay_height = $(".fixed-section").outerHeight();
-
-      $(window).on("scroll", md.checkScrollForTransparentNavbar);
-      demo.initDocumentationCharts();
-    });
-  </script>
   <script>
   const hamburger = document.querySelector(".hamburger");
   const navMenu = document.querySelector(".nav-menu");
@@ -194,5 +174,9 @@
   }
 
   </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 
 </html>
